fixed photo upload + added password encryption/generation in signup and update + added api library for skills + unique email + added homepage + added forget password => all functional